--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     background-size: cover;
     background-attachment: fixed;
   }
-
 </style>
 <body>
   <div class="sayfa">
     <!-- üst menü -->
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="hosgeldiniz.html">Örnek Site</a>
+        <a class="navbar-brand" href="hosgeldiniz.html">
+          <img src="resim/days gone.jpg" alt="Bootstrap" style="border-radius: 180px;" width="30" height="24">Örnek Site
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
           aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
