son eklemeler ve düzeltmeler

--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -45,6 +45,7 @@
     .box {
         transition: all 0.4s;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        box-shadow:5px 5px #bbbbbb;
     }
 
     .box:hover {
@@ -167,57 +168,55 @@
             <p>
                 <b>Projelerimiz:</b>
                 <p>
-                1. **Yeni Oyunlar Ekleme**: Mevcut oyun koleksiyonunu genişletmek için yeni oyunlar eklemek. Bu
+                1.Yeni Oyunlar Ekleme**: Mevcut oyun koleksiyonunu genişletmek için yeni oyunlar eklemek. Bu
                 oyunların çeşitliliğini artırmak için farklı türlerden oyunlar seçmek.
                 </p>
                 <p>
-                2. **Kullanıcı Dostu Arayüz Geliştirme**: Oyun sitesinin kullanıcı arayüzünü iyileştirmek. Daha kolay
+                2.Kullanıcı Dostu Arayüz Geliştirme**: Oyun sitesinin kullanıcı arayüzünü iyileştirmek. Daha kolay
                 gezinme, arama ve oyun seçme seçenekleri eklemek.
             </p>
             <p>
-                3. **Topluluk Oluşturma Özellikleri**: Oyuncular arasında etkileşimi artırmak için forumlar, sohbet
+                3.Topluluk Oluşturma Özellikleri**: Oyuncular arasında etkileşimi artırmak için forumlar, sohbet
                 odaları veya oyunlar için yorum bırakma gibi topluluk özellikleri eklemek.
             </p>
             <p>
-                4. **Mobil Uygulama Geliştirme**: Mobil cihazlarda oyun oynamayı kolaylaştırmak için bir mobil uygulama
+                4.Mobil Uygulama Geliştirme**: Mobil cihazlarda oyun oynamayı kolaylaştırmak için bir mobil uygulama
                 geliştirmek.
             </p>
             <p>
-                5. **Oyun İçi Satın Alma ve Abonelik Sistemi**: Oyunculara oyun içi satın alma veya abonelik seçenekleri
+                5.Oyun İçi Satın Alma ve Abonelik Sistemi**: Oyunculara oyun içi satın alma veya abonelik seçenekleri
                 sunmak. Bu, gelirinizi artırabilir.
             </p>
             <p>
-                6. **İstatistik ve Analitik Araçlar**: Kullanıcı etkileşimlerini ve oyun performansını izlemek için
+                6.İstatistik ve Analitik Araçlar**: Kullanıcı etkileşimlerini ve oyun performansını izlemek için
                 analitik araçlar eklemek. Bu, oyunlarınızı optimize etmenize yardımcı olabilir.
             </p>
             <p>
-                7. **Oyun Geliştiricileri ile İşbirliği**: Bağımsız oyun geliştiricileri ile işbirliği yaparak özgün
+                7.Oyun Geliştiricileri ile İşbirliği**: Bağımsız oyun geliştiricileri ile işbirliği yaparak özgün
                 içerikler eklemek ve yeni oyunlar geliştirmek.
             </p>
             <p>
-                8. **Reklam ve Pazarlama Stratejileri**: Oyun sitesini tanıtmak için reklam ve pazarlama stratejileri
+                8.Reklam ve Pazarlama Stratejileri**: Oyun sitesini tanıtmak için reklam ve pazarlama stratejileri
                 geliştirmek. Sosyal medya, bloglar, reklam kampanyaları gibi farklı kanalları kullanmak.
             </p>
             <p>
-                9. **Güvenlik ve Veri Koruma Güncellemeleri**: Kullanıcı bilgilerini ve oyun verilerini güvende tutmak
+                9.Güvenlik ve Veri Koruma Güncellemeleri**: Kullanıcı bilgilerini ve oyun verilerini güvende tutmak
                 için güvenlik önlemlerini güncellemek.
             </p>
             <p>
-                10. **Kullanıcı Geri Bildirimleri Değerlendirmesi**: Kullanıcıların geri bildirimlerini düzenli olarak
+                10.Kullanıcı Geri Bildirimleri Değerlendirmesi**: Kullanıcıların geri bildirimlerini düzenli olarak
                 incelemek ve siteyi geliştirmek için bu geri bildirimleri kullanmak.
             </p>
             <p>
-                11. **Yarışmalar ve Etkinlikler Düzenleme**: Oyuncuların katılmasını teşvik etmek için yarışmalar,
+                11.Yarışmalar ve Etkinlikler Düzenleme**: Oyuncuların katılmasını teşvik etmek için yarışmalar,
                 turnuvalar veya özel etkinlikler düzenlemek.
+            </p>
         </div>
     </div>
     <div class="container">
-        <img src="resim/dying light.jpg" class="box"
-            style="display: flex; width: 200px; height: 200px;margin-top: 70px; border-radius: 180px; flex-direction:column-reverse;">
-        <img src="resim/god of war.jpg" class="box"
-            style="display: flex; width: 200px; height: 200px;margin-top: 70px; border-radius: 180px; flex-direction:column-reverse; margin-left: 90px;">
-        <img src="resim/horizon.jpg" class="box"
-            style="display: flex; width: 200px; height: 200px;margin-top: 70px; border-radius: 180px; flex-direction:column-reverse; margin-left:90px;">
+       <img src="resim/dying light.jpg" class="box" style="display: flex; width: 200px; height: 200px;margin-top: 70px; border-radius: 180px; flex-direction:column-reverse;">
+        <img src="resim/god of war.jpg" class="box" style="display: flex; width: 200px; height: 200px;margin-top: 70px; border-radius: 180px; flex-direction:column-reverse; margin-left: 90px;">
+        <img src="resim/horizon.jpg" class="box" style="display: flex; width: 200px; height: 200px;margin-top: 70px; border-radius: 180px; flex-direction:column-reverse; margin-left:90px;">
     </div>
     </div>
 
@@ -239,7 +238,5 @@
         </nav>
     </div>
 </body>
-
 </body>
-
 </html>
